GEM-62 Implement product edit and added unit tests